fix answer text padding to align with question for desktop long form variant

--- a/express/code/blocks/faqv2/faqv2.css
+++ b/express/code/blocks/faqv2/faqv2.css
@@ -328,7 +328,7 @@
   font-weight: 400;
   margin-top: 0;
   padding-bottom: 10px;
-  padding-left: 24px;
+  padding-left: 30px;
   padding-right: 16px;
 }
 
